# epo-ops-mcp-server

./: .env.example  .gitignore  README.md  example_client.py  main.py  pyproject.toml  setup.py  test_script.py
epo_ops_mcp_server/: __init__.py  config.py  models.py
epo_ops_mcp_server/services/: epo_client.py
epo_ops_mcp_server/utils/: response.py
tests/: test_create_input_model.py  test_models.py  test_number_formats.py  test_server.py
